structure is ready

--- a/google1998/google1998.html
+++ b/google1998/google1998.html
@@ -7,8 +7,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://oldgoogle.neocities.org/favicon.ico">
 
     <style>
-        .search{
+        .search, .news{
             background-color: #EEEEEE;
+        }
+
+        .size1{
+            font-size: 0.6;
         }
     </style>
 </head>
@@ -55,6 +59,19 @@
                 </a>
             </div>
         </div>
+
+        <div class="news">
+            <p>Get Google! updates monthly!</p>
+            <div class="form2">
+                <form action="http://www.findmail.com/cgi-bin/subscribe.py" method="get">
+                    <input type="text" name="emailaddr" value="your e-mail">
+                    <input type="submit" name="SubmitAction" value="Subscribe">
+                    <a class="size1" href="http://www.findmail.com/list/google-friends/">Archive</a>
+                </form>
+                
+            </div>
+        </div>
+        <p class="size1">Copyright ©1997-8 Stanford University</p>
     </main>
 </body>
 </html>
