--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <div class="container">
         <h1>Mis Proyectos de Replicación</h1>
-        <a class="project-link" href="https://tu-proyecto-google-1985.com">Google 1985</a>
+        <a class="project-link" href="./google1998/google1998.html">Google 1998</a>
         <a class="project-link" href="https://tu-proyecto-pagina-comida.com">Página de Comida</a>
         <a class="project-link" href="https://google-actual.com">Google Actual</a>
     </div>
