--- a/google1998/google1998.html
+++ b/google1998/google1998.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,71 +8,81 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://oldgoogle.neocities.org/favicon.ico">
 
     <style>
-        .search, .news{
+        .content {
+            text-align: center;
+        }
+
+        .search,
+        .news {
             background-color: #EEEEEE;
         }
 
-        .size1{
+        .size1 {
             font-size: 0.6;
         }
     </style>
 </head>
+
 <body>
     <main>
-        <!-- image section -->
-        <div class="image">
-            <a href="https://oldgoogle.neocities.org/1998/">
+        <div class="content">
+            <!-- image section -->
+            <div class="image">
+                <a href="https://oldgoogle.neocities.org/1998/">
 
-                <img src="https://oldgoogle.neocities.org/1998/google.jpg" alt="google-image">
+                    <img src="https://oldgoogle.neocities.org/1998/google.jpg" alt="google-image">
 
-            </a>
-        </div>
-        <!-- search and form -->
-        <div class="search">
-            <p>Search the web using Google!</p>
-            <form action="https://oldgoogle.neocities.org/1998/search" method="get">
-                <input type="text" name="query" id="">
-                <div>
-                    <select name="num">
-                        <option value="10" selected="">10 results</option>
-                        <option value="30">30 results</option>
-                        <option value="100">100 results</option>
-                    </select>
-                    <input type="submit" value="Google Search">
-                    <input type="submit" name="sa" value="I'm feeling lucky">
-                </div>
-            </form>
-            <p><i>Index contains ~25 million pages (soon to be much bigger)</i></p>
-        </div>
-
-        <!-- about -->
-        <div class="about">
-            <h2>
-                <a href="https://oldgoogle.neocities.org/about">About Google!</a>
-            </h2>
-
-            <div class="links">
-                <a href="https://oldgoogle.neocities.org/stanford">
-                    Stanford Search
-                </a>
-                <a href="https://oldgoogle.neocities.org/stanford">
-                    Linux Search
                 </a>
             </div>
-        </div>
-
-        <div class="news">
-            <p>Get Google! updates monthly!</p>
-            <div class="form2">
-                <form action="http://www.findmail.com/cgi-bin/subscribe.py" method="get">
-                    <input type="text" name="emailaddr" value="your e-mail">
-                    <input type="submit" name="SubmitAction" value="Subscribe">
-                    <a class="size1" href="http://www.findmail.com/list/google-friends/">Archive</a>
+            <!-- search and form -->
+            <div class="search">
+                <p>Search the web using Google!</p>
+                <form action="https://oldgoogle.neocities.org/1998/search" method="get">
+                    <input type="text" name="query" id="">
+                    <div>
+                        <select name="num">
+                            <option value="10" selected="">10 results</option>
+                            <option value="30">30 results</option>
+                            <option value="100">100 results</option>
+                        </select>
+                        <input type="submit" value="Google Search">
+                        <input type="submit" name="sa" value="I'm feeling lucky">
+                    </div>
                 </form>
-                
+                <p><i>Index contains ~25 million pages (soon to be much bigger)</i></p>
             </div>
+
+            <!-- about -->
+            <div class="about">
+                <h2>
+                    <a href="https://oldgoogle.neocities.org/about">About Google!</a>
+                </h2>
+
+                <div class="links">
+                    <a href="https://oldgoogle.neocities.org/stanford">
+                        Stanford Search
+                    </a>
+                    <a href="https://oldgoogle.neocities.org/stanford">
+                        Linux Search
+                    </a>
+                </div>
+            </div>
+
+            <div class="news">
+                <p>Get Google! updates monthly!</p>
+                <div class="form2">
+                    <form action="http://www.findmail.com/cgi-bin/subscribe.py" method="get">
+                        <input type="text" name="emailaddr" value="your e-mail">
+                        <input type="submit" name="SubmitAction" value="Subscribe">
+                        <a class="size1" href="http://www.findmail.com/list/google-friends/">Archive</a>
+                    </form>
+
+                </div>
+            </div>
+            <p class="size1">Copyright ©1997-8 Stanford University</p>
+
         </div>
-        <p class="size1">Copyright ©1997-8 Stanford University</p>
     </main>
 </body>
+
 </html>
