--- a/google1998/google1998.html
+++ b/google1998/google1998.html
@@ -8,17 +8,37 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://oldgoogle.neocities.org/favicon.ico">
 
     <style>
+        body{
+            font-size: 18PX;
+        }
         .content {
             text-align: center;
+        }
+        img{
+            width: 400px;
         }
 
         .search,
         .news {
             background-color: #EEEEEE;
+            margin-right: 15rem;
+            margin-left: 15rem;
+        }
+
+        .search p{
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
+        .search input[type=text] {
+            width: 310px
         }
 
         .size1 {
             font-size: 0.6;
+        }
+        .foot{
+            margin-top: 0;
         }
     </style>
 </head>
@@ -79,7 +99,7 @@
 
                 </div>
             </div>
-            <p class="size1">Copyright ©1997-8 Stanford University</p>
+            <p class="size1 foot">Copyright ©1997-8 Stanford University</p>
 
         </div>
     </main>
