start page discount burguer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
+            margin-top: 3rem;
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
@@ -33,7 +34,7 @@
             text-align: center;
             margin: 20px 0;
             padding: 10px;
-            background-color: #f9c74f;
+            background-color: #dfc48b;
             color: #333;
             text-decoration: none;
             border-radius: 5px;
@@ -46,6 +47,10 @@
         .project-link:hover {
             background-color: #f4a261;
         }
+
+        footer p{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -57,8 +62,17 @@
                 Google 1998
             </a>
         </div>
-        <a class="project-link" href="https://tu-proyecto-pagina-comida.com">Página de Comida</a>
-        <a class="project-link" href="https://google-actual.com">Google Actual</a>
+        <a class="project-link" href="./discount/burguer.html">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvf4ck6iM8P704jJHyi_izoaeUrJX7zH1LaA&usqp=CAU" alt="burguer">
+            Burguer sale
+        </a>
+        <a class="project-link" href="https://google-actual.com">
+            <img src="https://clipground.com/images/golgpe-clipart-10.jpg" alt="">
+            Google actual            
+        </a>
+        <footer>
+            <p><i>Creado por Monica Melgarejo</i></p>
+        </footer>
     </div>
 </body>
 </html>
