--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /* Estilos generales */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
+            background-color: #bcb6b6;
             margin: 0;
             padding: 0;
         }
@@ -51,6 +51,10 @@
         footer p{
             text-align: center;
         }
+
+        footer a{
+            color: black;
+        }
     </style>
 </head>
 <body>
@@ -71,7 +75,7 @@
             Google actual            
         </a>
         <footer>
-            <p><i>Creado por Monica Melgarejo</i></p>
+            <p>Monica Melgarejo | <a href="http://" target="_blank" rel="noopener noreferrer">Github</a></p>
         </footer>
     </div>
 </body>
