--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             Google actual            
         </a>
         <footer>
-            <p>Monica Melgarejo | <a href="http://" target="_blank" rel="noopener noreferrer">Github</a></p>
+            <p>Monica Melgarejo | <a href="https://github.com/monick96/challengesCDC" target="_blank" rel="noopener noreferrer">Github</a></p>
         </footer>
     </div>
 </body>
