--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 Google 1998
             </a>
         </div>
-        <a class="project-link" href="./discount/burguer.html">
+        <a class="project-link" href="./burguer/burguer.html">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvf4ck6iM8P704jJHyi_izoaeUrJX7zH1LaA&usqp=CAU" alt="burguer">
             Burguer sale
         </a>
