ready google actual

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         </div>
         <a class="project-link" href="./burguer/burguer.html">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvf4ck6iM8P704jJHyi_izoaeUrJX7zH1LaA&usqp=CAU" alt="burguer">
-            Burguer sale
+            Burger sale
         </a>
-        <a class="project-link" href="https://google-actual.com">
-            <img src="https://clipground.com/images/golgpe-clipart-10.jpg" alt="">
+        <a class="project-link" href="./currentGoogle/currentGoogle.html">
+            <img src="https://clipground.com/images/golgpe-clipart-10.jpg" alt="image-google-icon">
             Google actual            
         </a>
         <footer>
-            <p>Monica Melgarejo | <a href="https://github.com/monick96/challengesCDC" target="_blank" rel="noopener noreferrer">Github</a></p>
+            <p>Monica Melgarejo | <a href="https://github.com/monick96/challengesCDC" target="_blank" rel="noopener noreferrer">GitHub</a></p>
         </footer>
     </div>
 </body>
