update  file team challenge

--- a/Desafio1_Grupo9_V1.4/index.html
+++ b/Desafio1_Grupo9_V1.4/index.html
@@ -20,12 +20,8 @@
                 <li><a href="#help">AI help</a></li>
                 <li><a href="#key">Features</a></li>
                 <li><a href="#how">How to use</a></li>
-                <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#carbon">Carbon emissions</a></li>
-                <li><a href="#how">How to use</a></li>
-                <li><a href="#help">AI help</a></li>
-                <li><a href="#key">Features</a></li>
-                <li><a href="#how">How to use</a></li>
+                <li><a href="#introduction">Web Sustainability</a></li>
+                <li><a href="#technology">Technology and Carbon Emissions</a></li>
             </ul>
         </nav>
         
@@ -78,18 +74,18 @@
 
             <section class="introduction-sustainability" id="introduction">
                 <div class="container">
-                    <h2 >Introduction to web sustainability</h2>
+                    <h2>Introduction to web sustainability</h2>
                     <p>As its impacts become more evident and frequent, climate change is quickly moving up the agenda for governments, communities, and companies worldwide. We know that reducing our greenhouse gas emissions is crucial to mitigate the worst effects of climate change and ensure a liveable and sustainable future.</p>
                     <p>Every industry has a part to play, including those of us in the web industry. In this article, we'll explore some of the environmental impacts of our digital lifestyles and discuss how web designers and developers can contribute to more sustainable practices.</p>
                 </div>
             </section>
 
-            <section class="how-it-contributes" id="carbon">
-                <div class="container" >
-                    <h2 >How digital technology adds to carbon emissions</h2>
+            <section class="how-it-contributes" id="technology">
+                <div class="container">
+                    <h2>How digital technology adds to carbon emissions</h2>
                     <ul>
-                    <li>People often assume that digital technology is "clean" because digital activities don't produce visible pollution like factories or cars. In fact, the internet accounts for around 4% of global carbon emissions, a figure equivalent to the output of the entire aviation industry.</li>
-                    <li>A large part of the environmental impact of the digital landscape stems from electricity use, often sourced from fossil fuels. Burning fossil fuels produces carbon dioxide (CO2), commonly referred to as carbon emissions. This electricity not only powers users' devices but also facilitates data storage and transfer across networks and supports the manufacturing of hardware for our digital infrastructure.</li>
+                        <li>People often assume that digital technology is "clean" because digital activities don't produce visible pollution like factories or cars. In fact, the internet accounts for around 4% of global carbon emissions, a figure equivalent to the output of the entire aviation industry.</li>
+                        <li>A large part of the environmental impact of the digital landscape stems from electricity use, often sourced from fossil fuels. Burning fossil fuels produces carbon dioxide (CO2), commonly referred to as carbon emissions. This electricity not only powers users' devices but also facilitates data storage and transfer across networks and supports the manufacturing of hardware for our digital infrastructure.</li>
                     </ul>
                     <div class="image-container">
                         <img src="assets/images/web-sustainability.png" alt="image that shows where carbon emissions come from in digital technology">
